turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:19: error: Int does not take parameters
  setCouleurBrosse(colors(rule(state)(couleur_actuelle)(mvmt_suivant)(0)))
                                                                     ^